<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label1"
        android:textColor="#5E5E5E"
        android:textSize="27sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <Button
        android:id="@+id/btnCangeFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:background="#BE009688"
        android:text="@string/btn1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.698"
        app:layout_constraintStart_toEndOf="@+id/textFirstCurr"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <Button
        android:id="@+id/btnCangeSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#BE009688"
        android:text="@string/btn1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.702"
        app:layout_constraintStart_toEndOf="@+id/textSecondCurr"
        app:layout_constraintTop_toBottomOf="@+id/btnCangeFirst"
        app:layout_constraintVertical_bias="0.218" />

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="159dp"
        android:layout_height="55dp"
        android:background="#BE009688"
        android:text="@string/btn2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCangeFirst"
        app:layout_constraintVertical_bias="0.451" />

    <EditText
        android:id="@+id/textFirstCurr"
        android:layout_width="215dp"
        android:layout_height="72dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:hint="@string/edittext1"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/textSecondCurr"
        android:layout_width="210dp"
        android:layout_height="67dp"
        android:ems="10"
        android:hint="@string/edittext2"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnConvert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFirstCurr"
        app:layout_constraintVertical_bias="0.666" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="108dp"
        android:layout_height="70dp"
        android:contentDescription="@string/arrow"
        app:layout_constraintBottom_toTopOf="@+id/textSecondCurr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.283"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFirstCurr"
        app:layout_constraintVertical_bias="0.666"
        app:srcCompat="@drawable/ic_arrow_down" />

    <TextView
        android:id="@+id/textViewInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label2"
        android:textAllCaps="true"
        android:textColor="#474747"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textFirstCurr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.563" />

</androidx.constraintlayout.widget.ConstraintLayout>