<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label1"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/textViewInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622" />

    <TextView
        android:id="@+id/textViewInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelInfo"
        android:textColor="#474747"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/scroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.858" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="350dp"
        android:layout_height="489dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="350dp"
            android:layout_height="489dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.924">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewRow1"
                    android:layout_width="175dp"
                    android:text="@string/view1"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewRow2"
                    android:layout_width="175dp"
                    android:text="@string/view2"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>